--- a/.docker/default.conf
+++ b/.docker/default.conf
@@ -6,7 +6,7 @@ server {
     location / {
         root   /usr/share/nginx/html;
         index  index.html;
-        add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; font-src data: 'self'";
+        add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.tiny.cloud/; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdn.tiny.cloud; font-src 'self' data: https://fonts.gstatic.com; img-src 'self' data: blob: https://sp.tinymce.com; connect-src 'self' https://fonts.gstatic.com";
         add_header X-XSS-Protection "1; mode=block";
       	add_header X-Frame-Options "DENY";
       	add_header X-Content-Type-Options nosniff;
